--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,12 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <div id="footer">
+      <div class="container">
+        <h5><small>Last modified {{site.time | date:"%Y%m%d"}}. Source code hosted on <a href="https://github.com/aanjhan/mywebsite">Github</a>. <span class="fa fa-copyright" aria-hidden="true"></span> All rights reserved.</small></h5>
+      </div>
+    </div>
+    </div>
 </body>	
 
 </html>
