--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+  <div id="wrap">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -74,12 +75,13 @@
                     <img src="img/image_300x300.jpg" alt="profilepic">
                     <div class="caption">
                         <h4>Contact</h4>
-                        <span class="fa fa-phone-square" aria-hidden="true"></span> +41 44 632 34 82<br>
-                        <span class="fa fa-envelope" aria-hidden="true"></span> raanjhan@inf.ethz.ch<br>
-                        <p>System Security Group, ETH Zurich<br>
+                        <p><b>Aanjhan Ranganathan</b><br>
+                        System Security Group, ETH Zurich<br>
                         CNB F101<br>
                         Universitaetstrasse 6<br>
                         8092 Zurich, Switzerland<br>
+                        <span class="fa fa-phone-square" aria-hidden="true"></span> +41 44 632 34 82<br>
+                        <span class="fa fa-envelope" aria-hidden="true"></span> raanjhan@inf.ethz.ch<br>
                         <p><a href="https://twitter.com/tuxmaniac" class="fa fa-twitter fa-lg fa-border" target="_blank"></a>
                         <a href="https://github.com/aanjhan" class="fa fa-github fa-lg fa-border" target="_blank"></a>
                         <a href="https://ch.linkedin.com/in/aanjhan" class="fa fa-linkedin fa-lg fa-border" target="_blank"></a></p>
