added education page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,7 +60,7 @@
                         <a href="#" class="fa fa-flask"> Research</a>
                     </li> 
                     <li>
-                        <a href="#" class="fa fa-graduation-cap"> Education</a>
+                        <a href="education" class="fa fa-graduation-cap"> Education</a>
                     </li>                     
                 </ul>
             </div>
