--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,6 +61,9 @@
                     </li> 
                     <li>
                         <a href="education" class="fa fa-graduation-cap"> Education</a>
+                    </li>
+                    <li>
+                        <a href="activities" class="fa fa-beer"> Activities</a>
                     </li>                     
                 </ul>
             </div>
