--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,7 +78,7 @@
                     <img src="img/new_profile.jpg" alt="profilepic">
                     <div class="caption">
                         <h4>Contact</h4>
-                        <p><b>Aanjhan Ranganathan</b><br>
+                        <p><b>Dr. sc. Aanjhan Ranganathan</b><br>
                         System Security Group, ETH Zurich<br>
                         CNB F101<br>
                         Universitaetstrasse 6<br>
