--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,10 +60,10 @@
                         <a href="research" class="fa fa-flask"> Research</a>
                     </li> 
                     <li>
-                        <a href="education" class="fa fa-graduation-cap"> Education</a>
+                        <a href="education" class="fa fa-graduation-cap"> Teaching</a>
                     </li>
                     <li>
-                        <a href="activities" class="fa fa-beer"> Activities</a>
+                        <a href="activities" class="fa fa-beer"> Service</a>
                     </li>                     
                 </ul>
             </div>
