--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,11 +79,11 @@
                     <img src="img/new_profile.jpg" alt="profilepic">
                     <div class="caption">
                         <h4>Contact</h4>
-                        <p><b>Dr. Aanjhan Ranganathan</b><br>
-                        System Security Group, ETH Zurich<br>
-                        CNB F101<br>
-                        Universitaetstrasse 6<br>
-                        8092 Zurich, Switzerland<br>
+                        <p><b>Prof. Aanjhan Ranganathan</b><br>
+                        Assistant Professor<br>
+                        <a href="http://www.ccis.northeastern.edu">CCIS</a>, Northeastern University<br>
+                        Boston, USA<br>
+                        Office #608 ISEC<br>
                         <span class="fa fa-phone-square" aria-hidden="true"></span> +41 44 632 34 82<br>
                         <span class="fa fa-envelope" aria-hidden="true"></span> aanjhan@northeastern.edu<br>
                         <p><a href="https://twitter.com/tuxmaniac" class="fa fa-twitter fa-lg fa-border" target="_blank"></a>
