--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,7 +84,7 @@
                         <a href="http://www.ccis.northeastern.edu">CCIS</a>, Northeastern University<br>
                         Boston, USA<br>
                         Office #608 ISEC<br>
-                        <span class="fa fa-phone-square" aria-hidden="true"></span> +41 44 632 34 82<br>
+                        <span class="fa fa-phone-square" aria-hidden="true"></span> +1 (617) 373 5701<br>
                         <span class="fa fa-envelope" aria-hidden="true"></span> aanjhan@northeastern.edu<br>
                         <p><a href="https://twitter.com/tuxmaniac" class="fa fa-twitter fa-lg fa-border" target="_blank"></a>
                         <a href="https://github.com/aanjhan" class="fa fa-github fa-lg fa-border" target="_blank"></a>
