--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,7 +79,7 @@
                     <img src="img/new_profile.jpg" alt="profilepic">
                     <div class="caption">
                         <h4>Contact</h4>
-                        <p><b>Prof. Aanjhan Ranganathan</b><br>
+                        <p><b>Aanjhan Ranganathan</b><br>
                         Assistant Professor<br>
                         <a href="http://www.ccis.northeastern.edu">CCIS</a>, Northeastern University<br>
                         Boston, USA<br>
