header updarte for college renaming

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,7 +81,7 @@
                         <h4>Contact</h4>
                         <p><b>Aanjhan Ranganathan</b><br>
                         Assistant Professor<br>
-                        <a href="http://www.ccis.northeastern.edu">CCIS</a>, Northeastern University<br>
+                        <a href="http://www.ccis.northeastern.edu">Khoury College</a>, Northeastern University<br>
                         Boston, USA<br>
                         Office #608 ISEC<br>
                         <span class="fa fa-phone-square" aria-hidden="true"></span> +1 (617) 373 5701<br>
