--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,9 @@
     <title>{{site.name}}</title>
 
     <!-- Bootstrap Core CSS -->
+    <script src="https://kit.fontawesome.com/c4eb1f7864.js" crossorigin="anonymous"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css"> -->
     <!--<link href="css/gsdk-base.css" rel="stylesheet">-->
     <!--<link href="css/mystyle.css" rel="stylesheet">-->
     <link href="{{ "/css/mystyle.css" | prepend: site.baseurl }}?{{site.time | date: '%s%N'}}" rel="stylesheet">
@@ -55,13 +56,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="pubs" class="fa fa-clipboard"> Publications</span></a>
+                        <a href="pubs"><i class="fa-solid fa-scroll"></i> Publications</span></a>
                     </li> 
                     <li>
-                        <a href="teaching" class="fa fa-graduation-cap"> Teaching</a>
+                        <a href="teaching"><i class="fa-solid fa-walkie-talkie"></i> Teaching</a>
                     </li>
                     <li>
-                        <a href="service" class="fa fa-beer"> Service</a>
+                        <a href="service"><i class="fa-solid fa-beer-mug-empty"></i> Service</a>
                     </li>                     
                 </ul>
             </div>
@@ -83,9 +84,9 @@
                         Office #608 ISEC<br>
                         <span class="fa fa-phone-square" aria-hidden="true"></span> +1 (617) 373 5701<br>
                         <span class="fa fa-envelope" aria-hidden="true"></span> aanjhan@northeastern.edu<br>
-                        <p><a href="https://twitter.com/tuxmaniac" class="fa fa-twitter fa-lg fa-border" target="_blank"></a>
-                        <a href="https://github.com/aanjhan" class="fa fa-github fa-lg fa-border" target="_blank"></a>
-                        <a href="https://ch.linkedin.com/in/aanjhan" class="fa fa-linkedin fa-lg fa-border" target="_blank"></a></p>
+                        <p><a href="https://twitter.com/tuxmaniac" target="_blank"><i class="fa-brands fa-twitter fa-lg"></i></a>
+                        <a href="https://github.com/aanjhan" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="https://ch.linkedin.com/in/aanjhan" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></a></p>
                     </div>
         </div>
            
