--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,7 +81,7 @@
                         Assistant Professor<br>
                         <a href="http://www.ccis.northeastern.edu">Khoury College</a>, Northeastern University<br>
                         Boston, USA<br>
-                        Office #608 ISEC<br>
+                        Office #612 177 Huntington Avenue<br>
                         <span class="fa fa-phone-square" aria-hidden="true"></span> +1 (617) 373 5701<br>
                         <span class="fa fa-envelope" aria-hidden="true"></span> aanjhan@northeastern.edu<br>
                         <p><a href="https://twitter.com/tuxmaniac" target="_blank"><i class="fa-brands fa-twitter fa-lg"></i></a>
