--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,7 +78,7 @@
                     <div class="caption">
                         <h4>Contact</h4>
                         <p><b>Aanjhan Ranganathan</b><br>
-                        Assistant Professor<br>
+                        Associate Professor<br>
                         <a href="http://www.ccis.northeastern.edu">Khoury College</a>, Northeastern University<br>
                         Boston, USA<br>
                         Office #612 177 Huntington Avenue<br>
