--- a/_includes/header_fullpage.html
+++ b/_includes/header_fullpage.html
@@ -12,8 +12,9 @@
     <title>{{site.name}}</title>
 
     <!-- Bootstrap Core CSS -->
+    <script src="https://kit.fontawesome.com/c4eb1f7864.js" crossorigin="anonymous"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css"> -->
     <!--<link href="css/gsdk-base.css" rel="stylesheet">-->
     <link href="{{ "/css/mystyle.css" | prepend: site.baseurl }}?{{site.time | date: '%s%N'}}" rel="stylesheet">
 
@@ -54,16 +55,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="pubs" class="fa fa-clipboard"> Publications</span></a>
-                    </li>
-                    <li>
-                        <a href="research" class="fa fa-flask"> Research</a>
+                        <a href="pubs"><i class="fa-solid fa-scroll"></i> Publications</span></a>
                     </li> 
                     <li>
-                        <a href="teaching" class="fa fa-graduation-cap"> Teaching</a>
+                        <a href="teaching"><i class="fa-solid fa-walkie-talkie"></i> Teaching</a>
                     </li>
                     <li>
-                        <a href="service" class="fa fa-beer"> Service</a>
+                        <a href="service"><i class="fa-solid fa-beer-mug-empty"></i> Service</a>
+                    </li> 
+                    <li>
+                        <a href="essays"><i class="fa-solid fa-pen-fancy"></i> Essays</a>
                     </li>                     
                 </ul>
             </div>
